gatekeeper-policy-admission-controller/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowClusterSecretStore
metadata:
  name: disallow-cluster-secret-store
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["ExternalSecret"]
